--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,18 @@
     <description>mall</description>
     <properties>
         <java.version>1.8</java.version>
+        <!-- ORM框架 -->
         <mybatis.spring.version>2.2.2</mybatis.spring.version>
-        <pagehelper.spring.version>1.4.2</pagehelper.spring.version>
-<!--        <mapper.spring.version>4.2.1</mapper.spring.version>-->
+        <!-- 通用Mapper -->
         <mybatis.mapper.version>1.2.2</mybatis.mapper.version>
+        <!-- 分页工具 -->
+        <pagehelper.spring.version>1.4.2</pagehelper.spring.version>
+        <!-- 数据库连接池 -->
         <druid.spring.version>1.2.9</druid.spring.version>
+        <!-- 工具类 -->
+        <hutool.version>5.8.2</hutool.version>
+        <!-- JSON对象转换解析 -->
+        <gson.version>2.9.0</gson.version>
     </properties>
 
     <dependencies>
@@ -57,29 +64,41 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-        <!-- ORM框架 -->
+
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>${mybatis.spring.version}</version>
         </dependency>
-        <!-- 通用Mapper -->
+
         <dependency>
             <groupId>io.mybatis</groupId>
             <artifactId>mybatis-mapper</artifactId>
             <version>${mybatis.mapper.version}</version>
         </dependency>
-        <!-- 分页工具 -->
+
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>${pagehelper.spring.version}</version>
         </dependency>
-        <!-- 数据库连接池 -->
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${druid.spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
         </dependency>
 
         <dependency>
