mall整合Redis实现缓存功能 1. 会员登录注册编码实现 2. 整合Redis作为缓存处理

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,8 @@ springdoc:
     enabled: true
     groups:
       enabled: true
+#Redis自定义key
+redis:
+  key:
+    prefix:
+      auth-code: "portal:authCode:"
