mall整合SpringSecurity和JWT实现认证和授权 1. 整合SpringSecurity权限认证和授权 2. 添加后台用户管理编码实现 3. 修复RedisConfig配置错误问题Configurable与Configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,9 @@ redis:
   key:
     prefix:
       auth-code: "portal:authCode:"
+#JWT设置
+jwt:
+  tokenHeader: Authorization #JWT存储的请求头
+  secret: mall-secret #JWT加解密使用的密钥
+  expiration: 604800000  #JWT的超期限时间(毫秒)
+  tokenHead: 'Bearer ' #JWT负载中拿到开头
