实现商品搜索接口 1. 数据库商品信息导入ES 2. 从ES搜索商品信息 整合Elasticsearch 8.2.3 客户端 1. 利用Common-Pool对象连接池进行管理ES链接 2. 添加ES索引、文档、查询工具类

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
         <knife4j.version>3.0.3</knife4j.version>
         <!-- JWT(JSON WEB TOKEN) -->
         <jwt.version>0.11.5</jwt.version>
+        <!-- 搜索引擎 -->
+        <elasticsearch.version>8.2.3</elasticsearch.version>
+        <!-- json-lib类库 -->
+        <jakarta-json.version>2.0.1</jakarta-json.version>
+        <!-- 对象连接池 -->
+        <commons-pool2.version>2.11.1</commons-pool2.version>
     </properties>
 
     <dependencies>
@@ -67,6 +73,21 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!--Elasticsearch相关依赖-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>co.elastic.clients</groupId>
+            <artifactId>elasticsearch-java</artifactId>
+            <version>${elasticsearch.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.json</artifactId>
+            <version>${jakarta-json.version}</version>
         </dependency>
         <!-- mysql驱动 -->
         <dependency>
@@ -146,6 +167,13 @@
             <version>${jwt.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- 对象连接池 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
