--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,9 @@ spring:
         max-wait: -1ms #连接池最大阻塞等待时间
         max-idle: 5    #连接池中的最大空闲连接
         min-idle: 0    #连接池中的最小空闲连接
-
+  #es搜索引擎
   elasticsearch:
-    uris:
+    uris: http://192.168.31.195:9200
 #mybatis配置信息
 mybatis:
   mapper-locations:
