1. 整合MongoDB文档数据存储 2. 整合RabbitMQ消息队列 3. 整合阿里云OSS文件上传 4. 整合jasypt进行配置文件的加密操作

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,10 @@
         <elasticsearch.version>7.17.5</elasticsearch.version>
         <!-- 对象连接池 -->
         <commons-pool2.version>2.11.1</commons-pool2.version>
+        <!-- 阿里云OSS文件存储 -->
+        <oss.version>3.15.1</oss.version>
+        <!-- 配置文件加密 -->
+        <jasypt.version>3.0.4</jasypt.version>
     </properties>
 
     <dependencies>
@@ -44,6 +48,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
         <!-- 服务监控 -->
         <dependency>
@@ -76,8 +85,24 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>HdrHistogram</artifactId>
+                    <groupId>org.hdrhistogram</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
-<!--        <dependency>-->
+        <!--Mongodb相关依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <!--消息队列-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>co.elastic.clients</groupId>-->
 <!--            <artifactId>elasticsearch-java</artifactId>-->
 <!--            <version>${elasticsearch.version}</version>-->
@@ -172,10 +197,28 @@
             <version>${commons-pool2.version}</version>
         </dependency>
 
+        <!-- 阿里云OSS文件存储 -->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>${oss.version}</version>
+        </dependency>
+
+        <!-- 配置文件加密 -->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>${jasypt.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
